Headbar border bug on smaller devices fixed

--- a/src/components/Headbar/Headbar.css
+++ b/src/components/Headbar/Headbar.css
@@ -106,7 +106,7 @@ body{
     .dropDown{
         display: flex;
         position: absolute;
-        top:59px;
+        top:70px;
         z-index: 4;
     
         width: 100vw;
@@ -130,7 +130,7 @@ body{
         align-items: start;
         width:100%;
 
-        border-top: 6px solid blueviolet;
+/*         border-top: 6px solid blueviolet; */
 
         background-color: rgb(10,10,10);
     }
